# crossvl

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LoadMacros.bat  LoadMacros.sh  README.md  vcpkg.json  xmake.lua
.github/workflows/: linux.yml  macosx.yml  windows.yml
App/: Application.cpp  Application.h  Main.cpp  xmake.lua
Core/: Common.cpp  Common.h  Defines.h  Types.h  xmake.lua
Core/Application/: Application.cpp  Application.h  AssetFinder.cpp  AssetFinder.h
Core/Graphics/: Buffer.h  Camera.cpp  Camera.h  Graphics.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Renderer.inl  RendererImpl.h  Shader.h  Types.h
Core/Graphics/RHI/: D3DCommon.h  METALCommon.h
Core/Graphics/RHI/D3D11/: D3D11ConstantBuffer.h  D3D11Renderer.cpp  (+6 more)
Core/Graphics/Shader/: Shader.h  ShaderCompileResult.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderSource.h
Core/Logging/: ILogOutput.h  Log.cpp  Log.h  LogLevel.h  LogManager.cpp  LogManager.h
Core/Math/: Math.h  Transform.h
Core/Math/Internal/: MathInternal.h
Core/Platform/: LogOutput.h  Window.h
Core/Platform/Win32/: StringUtils.h  Win32Utils.cpp  Win32Utils.h
Core/Utils/: Singleton.h
Samples/BlankApp/: BlankApp.cpp  BlankApp.h  Main.cpp  xmake.lua
Samples/HelloTriangle/: HelloTriangle.cpp  HelloTriangle.h  HelloTriangleApp.cpp  Main.cpp  xmake.lua
Samples/HelloTriangle/Assets/: HelloTriangleVS.hlsl
Samples/HelloTriangleApp/: HelloTriangleApp.cpp  HelloTriangleApp.h  Main.cpp  xmake.lua
Samples/HelloTriangleApp/Assets/: HelloTrianglePS.hlsl  HelloTriangleVS.hlsl
Samples/ModelLoading/: Main.cpp  ModelLoading.cpp  ModelLoading.h  xmake.lua
Samples/SpinningCube/: Main.cpp  SpinningCube.cpp  SpinningCube.h  xmake.lua
Samples/SpinningCube/Assets/: SpinningCubeVS.hlsl
Scripts/: Options.lua  Packages.lua  Rules.lua
Scripts/Macros/: BuildAllConfigs.lua  Clean.lua  DeepClean.lua  GenerateSolutionVS2022.lua  GenerateSolutionXCode.lua  WatchDir.lua  macOS.lua
Scripts/Plugins/: CreateSample.lua  TestRHI.lua  xmake.lua
Scripts/Templates/: AppCppTemplate  AppHeaderTemplate  MainTemplate  XmakeTemplate
old/: entry.cpp
old/metal/: renderer.cpp  renderer.hpp
old/opengl/: Application.cpp  Application.h  Cube.cpp  Cube.h  Shader.cpp  Shader.h
src/: entry.cpp  main.cpp
src/metal/: CMakeLists.txt
src/opengl/: CMakeLists.txt  Shader.cpp
(+50 files in other folders)
